# mytardis_rocrate_builder

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  changes_from_schema.org.md  data_class_utils.py  pyproject.toml  rocrate_builder.py  rocrate_dataclasses.py  rocrate_writer.py
.github/workflows/: pull_request.yml  test_and_lint.yml
mytardis_rocrate_builder/: __init__.py  rocrate_builder.py  rocrate_writer.py
mytardis_rocrate_builder/rocrate_dataclasses/: crate_manifest.py  data_class_utils.py  rocrate_dataclasses.py
mytardis_rocrate_builder/src/: rocrate_builder.py  rocrate_writer.py
mytardis_rocrate_builder/src/constants/: organisatons.py
mytardis_rocrate_builder/src/rocrate__dataclasses/: data_class_utils.py
mytardis_rocrate_builder/src/rocrate_dataclasses/: rocrate_dataclasses.py
src/rocrate__dataclasses/: data_class_utils.py
src/rocrate_builder/: rocrate_tar.py  rocrate_writer.py
tests/: conftest.py  test_builder.py  test_dataclass_utils.py  test_dataclasses.py  test_rocrate_writer.py
tests/test-data/test_dataset/: test_datafile.bam
